fixed the css for the time to be bold

--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -32,6 +32,11 @@ h1 {
 
 }
 
+#time {
+  font-size: 20px;
+    font-weight: bold
+}
+
 .answerchoices:hover {
 background-color: lightgoldenrodyellow;
 
